--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0px;
     box-sizing: border-box;
 }
+body{
+    font-family: serif;
+}
 /* navigation part start  */
 .navigation_manu {
     width: 96.25rem;
@@ -55,7 +58,6 @@ input{
     color: aliceblue;
     border-radius: 15px;
 }
-/* sign In end */
 
 /* cart icon start  */
 #Increment_Number{
@@ -76,108 +78,47 @@ input{
 
 /* navigation part end */
 
-
-
-/* main content start  */
-.content_container{
-    width: 96.25rem;
-    margin:0 auto;
-    padding: 50px 0;
-    display: flex;
-    gap: 5.5px;
+/**
+*? content container part start or cart 
+**/
+.items{
+    width: 236px;
+    height: auto; 
+    border: 1px solid #000;
 }
-
-/* first cart start  */
-.cart_one {
-    width:215px;
-    height:361px;
-    
-    /* padding: 10px 10px 0px 10px; */
-}
-.Product_discount_container h4{
-    color: #fff;
-}
-
-.num_Span_Container {
-    display: inline-block;
-    color: white;
-}
-.cart_one a{
-    text-decoration: none;
-    color: #000;
-}
-.main_cart_container{
-    width: 215px;
-    height: 200px;
-    position: relative;
-    text-align: center;
-}
-.main_cart_container img{
-    width: 130px;
-    height: 180px;
-    /* position: relative;
-    left: -7.5px; */
-}
-.Product_discount_container {
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    left: 10px;
-    color: #fff;
-    background-color: red;
-}
-.cart_caption_container h1{
-    font-size: 20px;
-}
-.cart_caption_container h2{
-    font-size: 17px;
-}
-.cart_caption_container p{
-    font-size: 16px;
-    color: darkcyan;
-}
-.totalPriceWith_dis_container {
+.cart_container{
     display: flex;
     align-items: center;
+    justify-content: center;
+    gap: 25px;
+}
+.details {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px;
+}
+.price{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.buttons ,.price_discount {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
+    
 }
-/* view btn and add to cart btn edit start  */
-.cart_one:hover  {
-    /* width:215px;
-    height:361px; */
-    box-shadow: 0px 0px 20px gray;
+.bi-dash-lg{
+    color: red;
 }
-.Add_cart{
-    display: none;
+.bi-plus-lg {
+    color: green;
 }
-.cart_one:hover .Add_cart {
-    display: block;
-    padding: 15px 45px;
-    border: none;
-    border-radius: 26.5px;
-    color: #fff;
-    background-color: #1e90ff;
-    position: absolute;
-    top: 80px;
-    left: 25px;
+.details h5{
+    color: cadetblue;
 }
-.view_details_info_container{
-    display: none;
-}
-.cart_one:hover .view_details_info_container{
-    display: block;
-    width: 215px;
-    height: 36px;
-    margin-top: 11.8px;
-    border: none;
-    padding: 6px 12px;
-    color:  #1e90ff;
-    background-color: antiquewhite;
-}
-/* view btn and add to cart btn edit end  */
 
-/* first cart end */
-
-/* main content end */
